--- a/GyaniBabu Official.html
+++ b/GyaniBabu Official.html
@@ -5,7 +5,7 @@
 <body>
 <body bgcolor=yellow>
 <h1> This is GyaniBabu </h1>
-
+<font face=Comic Sans MS>
 <h2> About me </h2>
 From India <br>
 Loves science and math <br>
@@ -13,8 +13,8 @@ Knows Scratch, MSW Logo and HTML <br>
 
 <h2> <a href="https://scratch.mit.edu/users/GyaniBabu/">Visit Profile on Scratch </a> </h2>
 <h1> Some of my projects </h1>
-<a href="https://scratch.mit.edu/projects/819780149">KosmoLogo v0.7 </a> <br>
+<a href="https://scratch.mit.edu/projects/828408031/">GyaniLogo v0.73 </a> <br>
 <a href="https://scratch.mit.edu/projects/821047409">Galactic Gurdian </a> <br>
-<a href="https://scratch.mit.edu/projects/824504753">Scratch Tablet OS v0.25 (work in progress) </a>
+<a href="https://scratch.mit.edu/projects/824504753">Scratch Tablet OS v0.25 </a>
 </body>
 </html>
